Update img pathes

--- a/src/partials/our_teachers.html
+++ b/src/partials/our_teachers.html
@@ -10,19 +10,19 @@
         <picture>
           <source
             srcset="
-              ../img/teachers/teacher-1@1x.avif 1x,
-              ../img/teachers/teacher-1@2x.avif 2x
+              /img/teachers/teacher-1@1x.avif 1x,
+              /img/teachers/teacher-1@2x.avif 2x
             "
             type="image/avif"
           />
           <source
             srcset="
-              ../img/teachers/teacher-1@1x.png 1x,
-              ../img/teachers/teacher-1@2x.png 2x
+              /img/teachers/teacher-1@1x.png 1x,
+              /img/teachers/teacher-1@2x.png 2x
             "
           />
           <img
-            src="../img/teachers/teacher-1@1x.png"
+            src="/img/teachers/teacher-1@1x.png"
             alt="Teacher's avatar. Girl on the gray background."
             class="teacher-img"
             width="150"
@@ -41,19 +41,19 @@
         <picture>
           <source
             srcset="
-              ../img/teachers/teacher-2@1x.avif 1x,
-              ../img/teachers/teacher-2@2x.avif 2x
+              /img/teachers/teacher-2@1x.avif 1x,
+              /img/teachers/teacher-2@2x.avif 2x
             "
             type="image/avif"
           />
           <source
             srcset="
-              ../img/teachers/teacher-2@1x.png 1x,
-              ../img/teachers/teacher-2@2x.png 2x
+              /img/teachers/teacher-2@1x.png 1x,
+              /img/teachers/teacher-2@2x.png 2x
             "
           />
           <img
-            src="../img/teachers/teacher-2@1x.png"
+            src="/img/teachers/teacher-2@1x.png"
             alt="Teacher's avatar. Boy on the light-brown background."
             class="teacher-img"
             width="150"
@@ -72,19 +72,19 @@
         <picture>
           <source
             srcset="
-              ../img/teachers/teacher-3@1x.avif 1x,
-              ../img/teachers/teacher-3@2x.avif 2x
+              /img/teachers/teacher-3@1x.avif 1x,
+              /img/teachers/teacher-3@2x.avif 2x
             "
             type="image/avif"
           />
           <source
             srcset="
-              ../img/teachers/teacher-3@1x.png 1x,
-              ../img/teachers/teacher-3@2x.png 2x
+              /img/teachers/teacher-3@1x.png 1x,
+              /img/teachers/teacher-3@2x.png 2x
             "
           />
           <img
-            src="../img/teachers/teacher-3@1x.png"
+            src="/img/teachers/teacher-3@1x.png"
             alt="Teacher's avatar. Boy on the light-brown background."
             class="teacher-img"
             width="150"
@@ -104,19 +104,19 @@
         <picture>
           <source
             srcset="
-              ../img/teachers/teacher-4@1x.avif 1x,
-              ../img/teachers/teacher-4@2x.avif 2x
+              /img/teachers/teacher-4@1x.avif 1x,
+              /img/teachers/teacher-4@2x.avif 2x
             "
             type="image/avif"
           />
           <source
             srcset="
-              ../img/teachers/teacher-4@1x.png 1x,
-              ../img/teachers/teacher-4@2x.png 2x
+              /img/teachers/teacher-4@1x.png 1x,
+              /img/teachers/teacher-4@2x.png 2x
             "
           />
           <img
-            src="../img/teachers/teacher-4@1x.png"
+            src="/img/teachers/teacher-4@1x.png"
             alt="Teacher's avatar. Boy on the light-brown background."
             class="teacher-img"
             width="150"
