--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -14,7 +14,7 @@
             <li class="proposal-item">
               <div class="icon-wrapper">
                 <svg class="check-icon" width="14" height="14">
-                  <use href="./img/icons.svg#icon-check"></use>
+                  <use href="/img/icons.svg#icon-check"></use>
                 </svg>
               </div>
               <p class="proposal-item-text">
@@ -25,7 +25,7 @@
             <li class="proposal-item">
               <div class="icon-wrapper">
                 <svg class="check-icon" width="14" height="14">
-                  <use href="./img/icons.svg#icon-check"></use>
+                  <use href="/img/icons.svg#icon-check"></use>
                 </svg>
               </div>
               <p class="proposal-item-text">
@@ -36,7 +36,7 @@
             <li class="proposal-item">
               <div class="icon-wrapper">
                 <svg class="check-icon" width="14" height="14">
-                  <use href="./img/icons.svg#icon-check"></use>
+                  <use href="/img/icons.svg#icon-check"></use>
                 </svg>
               </div>
               <p class="proposal-item-text">
@@ -52,19 +52,16 @@
             <picture>
               <source
                 srcset="
-                  ../img/books/books@1x.avif 1x,
-                  ../img/books/books@2x.avif 2x
+                  /img/books/books@1x.avif 1x,
+                  /img/books/books@2x.avif 2x
                 "
                 type="image/avif"
               />
               <source
-                srcset="
-                  ../img/books/books@1x.png 1x,
-                  ../img/books/books@2x.png 2x
-                "
+                srcset="/img/books/books@1x.png 1x, /img/books/books@2x.png 2x"
               />
               <img
-                src="../img/books/books@1x.png"
+                src="/img/books/books@1x.png"
                 alt="Tall stack of books"
                 class="books-img"
                 width="214"
