--- a/src/css/leave_app_form.css
+++ b/src/css/leave_app_form.css
@@ -2,49 +2,41 @@
   display: none;
 }
 
-/* .visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  clip-path: inset(100%);
-  white-space: nowrap;
-  border: 0;
-} */
-
-.modal-form {
+.leave-form {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
 
 @media screen and (min-width: 768px) {
-  .modal-form {
+  .leave-form {
     padding-left: 102px;
     padding-right: 102px;
   }
 }
-/* .form-field {
-  position: relative;
-} */
 
-/* .form-container {
-  margin-bottom: 8px;
-} */
+@media (min-width: 1280px) {
+  .image {
+    flex: 0 0 492px;
+  }
 
-/* .form-field textarea::placeholder {
-  color: red
-} */
+  .leave-form {
+    flex: 1 1 500px;
+    max-width: 500px;
+    min-width: 0;
+    padding-left: 0;
+    padding-right: 0;
+    box-sizing: border-box;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
 
 .form-input {
   display: block;
   box-sizing: border-box;
   padding: 16px 16px 16px 18px;
   width: 100%;
-  /* width: 335px; */
   height: 50px;
   border: 1px solid rgba(18, 20, 23, 0.1);
   border-radius: 12px;
@@ -56,11 +48,10 @@
 }
 
 @media screen and (min-width: 768px) {
- .form-input {
-  height: 56px;
+  .form-input {
+    height: 56px;
+  }
 }
-}
-
 
 .form-input:focus + .input-container {
   color: var(--green);
@@ -69,18 +60,6 @@
 .form-input:focus {
   border: 1px solid var(--green);
 }
-
-/* .form-label {
-  display: block;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-  margin-bottom: 4px;
-  width: 100%;
-  height: 15px;
-} */
 
 /* textarea */
 .textarea-container {
@@ -102,6 +81,13 @@ textarea {
   resize: none;
   outline: transparent;
 }
+
+@media screen and (min-width: 768px) {
+  textarea {
+    max-height: 104px;
+  }
+}
+
 .form-textarea {
   resize: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -117,21 +103,18 @@ textarea {
 }
 
 @media screen and (min-width: 768px) {
-.textarea-container textarea::placeholder {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-}
+  .textarea-container textarea::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+  }
 }
 
 .text-link {
-  /* margin-left: 27px; */
-  /* color: var(--green); */
   text-decoration: underline;
 }
 
 .text-link:hover {
-  /* margin-left: 27px; */
   color: var(--green);
   text-decoration: underline;
 }
@@ -147,9 +130,9 @@ line-height: 1.5;
 
 @media screen and (min-width: 768px) {
   .leave-item-text-down {
-  font-size: 14px;
-  line-height: 1.6;
-}
+    font-size: 14px;
+    line-height: 1.6;
+  }
 }
 
 .leave-item-text-up {
@@ -158,22 +141,25 @@ line-height: 1.5;
   line-height: 1.7;
   letter-spacing: 0%;
   text-align: center;
-   color: gba(18, 20, 23, 0.8);
+  color: rgba(18, 20, 23, 0.8);
 
   margin-bottom: 20px;
 }
 
 @media screen and (min-width: 768px) {
   .leave-item-text-up {
-  font-size: 18px;
-  line-height: 1.66;
-  color: rgba(18, 20, 23, 0.5);
-
-}
+    font-size: 18px;
+    line-height: 1.66;
+    color: rgba(18, 20, 23, 0.5);
+    padding-left: 159px;
+    padding-right: 159px;
+    margin-bottom: 64px;
+    width: 100%;
+  }
 }
 
 .form-input::placeholder {
-  color: var(--black 10%);
+  color: var(--black);
 }
 
 .radio {
@@ -184,7 +170,7 @@ line-height: 1.5;
   .radio {
     display: inline-flex;
     gap: 16px;
-    margin-bottom: 32 px;
+    margin-bottom: 32px;
   }
 }
 
@@ -194,42 +180,35 @@ line-height: 1.5;
   margin-bottom: 16px;
 }
 
-
 @media screen and (min-width: 768px) {
- .radio-text {
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 1.33;
-  letter-spacing: -0, 02;
-  color: var(--black);
-  margin-bottom: 14px;
+  .radio-text {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.33;
+    letter-spacing: -0.02;
+    color: var(--black);
+    margin-bottom: 14px;
+  }
 }
-}
-/* .radio input[type="radio"] {
-  margin: 0; 
-  margin-right: 8px;
-  color: red;
-} */
 
 .radio label {
-  display: flex; 
-  align-items: center; 
-  gap: 8px; 
+  display: flex;
+  align-items: center;
+  gap: 8px;
   cursor: pointer;
 
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
-  letter-spacing: 0, 02;
-  /* text-align: center; */
+  letter-spacing: 0.02;
   color: var(--black);
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
   .radio label {
-font-size: 18px;
-line-height: 1.33;
-}
+    font-size: 18px;
+    line-height: 1.33;
+  }
 }
 
 input[type='radio'] {
@@ -238,13 +217,13 @@ input[type='radio'] {
   -moz-appearance: none;
   width: 18px;
   height: 18px;
-  border: 2px solid #12141733; /* зелена рамка */
+  border: 2px solid #12141733;
   border-radius: 50%;
-  background-color: white; /* білий фон */
+  background-color: white;
   display: inline-block;
   position: relative;
   cursor: pointer;
-  margin: 0; /* щоб не було лишніх відступів */
+  margin: 0;
 }
 
 input[type='radio']:checked {
@@ -261,4 +240,77 @@ input[type='radio']:checked::after {
   background-color: var(--green);
   border-radius: 50%;
   transform: translate(-50%, -50%);
+}
+
+.image {
+  width: 492px;
+  height: 578px;
+  background-color: var(--green);
+  border-radius: 30px;
+  overflow: hidden;
+  position: relative;
+}
+
+.image img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 1279px) {
+  .image {
+    display: none;
+  }
+}
+
+.image-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.7);
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.image-text-1000 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.2;
+  letter-spacing: 0.02;
+  color: rgba(255, 255, 255, 0.7);
+  text-align: center;
+  margin-bottom: 8px;
+  margin-top: 20px;
+}
+
+@media (min-width: 1280px) {
+  .leave-form__grid {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    gap: 32px;
+    column-gap: 24px;
+  }
+  .image {
+    flex: 0 0 492px;
+    max-width: 492px;
+  }
+
+  .leave-form {
+    flex: 1 1 500px;
+    max-width: 500px;
+    min-width: 0;
+    padding: 0;
+  }
+}
+.cccc {
+  width: 100%;
+}
+
+@media screen and (min-width: 1280px) {
+  .cccc {
+    width: 1024px;
+  }
 }
