--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,104 @@
-<footer class="footer">
-  <div class="container"></div>
+<footer class="footer" id="footer">
+  <div class="container footer-container">
+    <!-- Верхня частина: логотип + контакти + навігація -->
+    <div class="footer-logo">
+      <!-- Лого -->
+      <a class="footer-logo-link" href="/"> english<span class="logo-span">excellence</span>. </a>
+    </div>
+      <!-- Контакти -->
+      <ul class="footer-contacts">
+        <li>
+          <p class="footer-contacts-label">Phone number:</p>
+          <a class="footer-phone" href="tel:+380684439426"
+            >+380 (68) 443-94-26</a
+          >
+        </li>
+        <li>
+          <p class="footer-contacts-label">Address:</p>
+          <address class="footer-phone">32a M. Bazhana ave</address>
+        </li>
+      </ul>
+
+
+
+
+      <!-- Навігація -->
+      <nav class="footer-nav" aria-label="Footer navigation">
+        <ul class="footer-menu">
+          <li class="footer-menu-item">
+            <a class="footer-address" href="#about">About us</a>
+          </li>
+          <li class="footer-menu-item">
+            <a class="footer-address" href="#lessons">Our lessons</a>
+          </li>
+          <li class="footer-menu-item">
+            <a class="footer-address" href="#teachers">Teachers</a>
+          </li>
+          <li class="footer-menu-item">
+            <a class="footer-address" href="#reviews">Reviews</a>
+          </li>
+          <li class="footer-menu-item">
+            <a class="footer-address" href="#contacts">Contact us</a>
+          </li>
+        </ul>
+      </nav>
+
+
+     <div class="modal_social">
+          <ul class="footer-social-list">
+            <li class="social-item">
+              <a class="social-link" href="https://www.facebook.com/goITclub/">
+                <svg class="social-icon" width="26" height="26">
+                  <use href="/img/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="https://www.instagram.com/goitclub/">
+                <svg class="social-icon" width="26" height="26">
+                  <use href="/img/icons.svg#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="https://www.youtube.com/c/GoIT">
+                <svg class="social-icon" width="26" height="26">
+                  <use href="/img/icons.svg#icon-youtube"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+
+    <!-- Лінія -->
+    <hr class="footer-divider" />
+
+    <!-- Нижня смуга: копірайт + політики -->
+    <div class="footer-bottom">
+      <p class="footer-copyright">
+        ©2023 English Excellence. All rights reserved.
+      </p>
+      <ul class="footer-legal">
+        <li class="footer-legal-item">
+          <a
+            class="footer-legal-link"
+            href="/privacy-policy"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Privacy Policy</a
+          >
+        </li>
+        <li class="footer-legal-item">
+          <a
+            class="footer-legal-link"
+            href="/terms"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Terms of Service</a
+          >
+        </li>
+      </ul>
+    </div>
+  
 </footer>
