--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,6 +1,10 @@
 .reviews-slider {
   position: relative;
   width: 100%;
+
+  @media screen and (min-width: 1280px) {
+    max-width: 1024px;
+  }
 }
 .viewport {
   overflow: hidden;
