--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -1,7 +1,7 @@
 <section id="application-form" class="section">
   <div class="container">
     <h2 class="section-title">Leave an application</h2>
-    <div class="cccc">
+    <div class="form-img-container">
       <p class="leave-item-text-up">
         Please use the form below to contact us. Enter your name, email, and
         message and we'll get back to you shortly.
@@ -11,14 +11,14 @@
           <picture>
             <source
               srcset="
-                ../img/leave_an_app/girl@1x.png 1x,
-                ../img/leave_an_app/girl@2x.png 2x
+                ./img/leave_an_app/girl@1x.png 1x,
+                ./img/leave_an_app/girl@2x.png 2x
               "
               media="(min-width: 1280px)"
             />
             <img
-              src="../img/leave_an_app/girl@1x.png"
-              srcset="../img/leave_an_app/girl@2x.png 2x"
+              src="./img/leave_an_app/girl@1x.png"
+              srcset="./img/leave_an_app/girl@2x.png 2x"
               alt="Student with headphones"
             />
           </picture>
@@ -38,6 +38,8 @@
               name="user-name"
               id="user-name"
               placeholder="Name"
+              pattern="^[A-Za-zА-Яа-яЁёІіЇїЄє\s]{2,}$"
+              title="Мінімум 2 літери, тільки букви та пробіли"
             />
           </div>
           <div class="form-container">
@@ -48,6 +50,8 @@
               name="phone"
               id="phone"
               placeholder="Phone"
+              pattern="^\+38\s?\(0\d{2}\)\s?\d{3}-\d{2}-\d{2}$"
+              title="Формат: +38 (0XX) XXX-XX-XX"
             />
           </div>
           <div class="form-container">
@@ -58,6 +62,8 @@
               name="mail"
               id="mail"
               placeholder="Email"
+              pattern="^[^@\s]+@[^@\s]+\.[^@\s]+$"
+              title="Введіть правильний email"
             />
           </div>
           <div class="textarea-container">
