--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -1,3 +1,128 @@
-<section id="application-form" class="section leave-form">
-  <div class="container"></div>
+<section id="application-form" class="section">
+  <div class="container">
+    <h2 class="section-title">Leave an application</h2>
+    <div class="form-img-container">
+      <p class="leave-item-text-up">
+        Please use the form below to contact us. Enter your name, email, and
+        message and we'll get back to you shortly.
+      </p>
+      <div class="leave-form__grid">
+        <div class="image">
+          <picture>
+            <source
+              srcset="
+                ./img/leave_an_app/girl@1x.png 1x,
+                ./img/leave_an_app/girl@2x.png 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <img
+              src="./img/leave_an_app/girl@1x.png"
+              srcset="./img/leave_an_app/girl@2x.png 2x"
+              alt="Student with headphones"
+            />
+          </picture>
+          <p class="image-text-1000">1000</p>
+          <p class="image-text">
+            of our online English language lessons! This journey has been full
+            of discovery, growth and unforgettable moments, and we are happy to
+            share this joyful event with you.
+          </p>
+        </div>
+        <form class="leave-form" action="#">
+          <div class="form-container">
+            <label class="visually-hidden" for="user-name">Name</label>
+            <input
+              class="form-input"
+              type="text"
+              name="user-name"
+              id="user-name"
+              placeholder="Name"
+              pattern="^[A-Za-zА-Яа-яЁёІіЇїЄє\s]{2,}$"
+              title="Мінімум 2 літери, тільки букви та пробіли"
+            />
+          </div>
+          <div class="form-container">
+            <label class="visually-hidden" for="phone">Phone</label>
+            <input
+              class="form-input"
+              type="tel"
+              name="phone"
+              id="phone"
+              placeholder="Phone"
+              pattern="^\+38\s?\(0\d{2}\)\s?\d{3}-\d{2}-\d{2}$"
+              title="Формат: +38 (0XX) XXX-XX-XX"
+            />
+          </div>
+          <div class="form-container">
+            <label class="visually-hidden" for="mail">Email</label>
+            <input
+              class="form-input"
+              type="email"
+              name="mail"
+              id="mail"
+              placeholder="Email"
+              pattern="^[^@\s]+@[^@\s]+\.[^@\s]+$"
+              title="Введіть правильний email"
+            />
+          </div>
+          <div class="textarea-container">
+            <label class="visually-hidden" for="user-comment">Comment</label>
+            <textarea
+              name="user-comment"
+              class="form-textarea"
+              id="user-comment"
+              rows="10"
+              placeholder="Comment"
+            ></textarea>
+          </div>
+          <p class="radio-text">Choose a teacher</p>
+          <div role="group" class="radio">
+            <label for="maria"
+              ><input
+                type="radio"
+                name="teacher"
+                value="maria"
+                id="maria"
+              />Maria</label
+            >
+            <label for="artem"
+              ><input
+                type="radio"
+                name="teacher"
+                value="artem"
+                id="artem"
+              />Artem</label
+            >
+            <label for="ilona"
+              ><input
+                type="radio"
+                name="teacher"
+                value="ilona"
+                id="ilona"
+              />Ilona</label
+            >
+            <label for="volodymyr"
+              ><input
+                type="radio"
+                name="teacher"
+                value="volodymyr"
+                id="volodymyr"
+              />Volodymyr</label
+            >
+          </div>
+          <button type="submit" class="button lesson-button">Send</button>
+          <p class="leave-item-text-down">
+            By clicking on “Send” button, you agree to our
+            <a
+              class="text-link leave-item-text-down"
+              href="/privacy-policy"
+              target="_blank"
+              >Privacy Policy</a
+            >, and allow Promodo to use this information for marketing purposes.
+          </p>
+        </form>
+      </div>
+    </div>
+  </div>
 </section>
