--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -63,7 +63,7 @@
               <img
                 src="/img/books/books@1x.png"
                 alt="Tall stack of books"
-                class="books-img"
+                class="books-img animated"
                 width="214"
                 height="263"
               />
