--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="section section-reviews" id="reviews">
+<section class="section section-reviews animated" id="reviews">
   <div class="container">
     <h2 class="section-title">What our <span>students</span> say</h2>
     <p class="section-subtitle">
