--- a/src/css/base.css
+++ b/src/css/base.css
@@ -88,13 +88,14 @@ a {
   border-radius: 8px;
   background-color: var(--lighter-green);
   z-index: -1;
+
   transform-origin: center;
   transition: transform 0.6s cubic-bezier(0.77, 0, 0.175, 1);
-  transform: translateX(0) scaleX(1);
+  transform: rotate(0deg);
 }
 
 .section-title:hover span::after {
-  transform: scaleX(0.001);
+  transform: rotate(360deg);
 }
 
 .section-subtitle {
