--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,9 @@
 <footer class="footer" id="footer">
-  <div class="container footer-container">
-    <!-- Верхня частина: логотип + контакти + навігація -->
+  <div class="container ">
+
+<div class="footer-container">   
+   <div  class="logo-contacts-container">    
+      <!-- Верхня частина: логотип + контакти + навігація -->
     <div class="footer-logo">
       <!-- Лого -->
       <a class="footer-logo-link" href="/"> english<span class="logo-span">excellence</span>. </a>
@@ -18,9 +21,7 @@
           <address class="footer-phone">32a M. Bazhana ave</address>
         </li>
       </ul>
-
-
-
+    </div>
 
       <!-- Навігація -->
       <nav class="footer-nav" aria-label="Footer navigation">
@@ -42,7 +43,6 @@
           </li>
         </ul>
       </nav>
-
 
      <div class="modal_social">
           <ul class="footer-social-list">
@@ -68,7 +68,9 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div></div>
+
+
 
 
     <!-- Лінія -->
