--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -18,7 +18,15 @@
         </li>
         <li>
           <p class="footer-contacts-label">Address:</p>
-          <address class="footer-phone">32a M. Bazhana ave</address>
+<address>
+  <a 
+    class="footer-phone" 
+    href="https://maps.google.com/?q=32a+M.+Bazhana+ave" 
+    target="_blank" 
+    rel="noopener noreferrer">
+    32a M. Bazhana ave
+  </a>
+</address>
         </li>
       </ul>
     </div>
