--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,7 +41,7 @@
         <ul class="social-list">
           <li class="header-nav-item">
             <a
-              class="social-link "
+              class="social-link header-link"
               href="https://www.facebook.com/goITclub/"
             >
               <svg class="social-icon" width="26" height="26">
