--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -53,21 +53,21 @@
      <div class="modal_social">
           <ul class="footer-social-list">
             <li class="social-item">
-              <a class="social-link" href="https://www.facebook.com/goITclub/">
+              <a class="social-link social-link-footer" href="https://www.facebook.com/goITclub/">
                 <svg class="social-icon" width="26" height="26">
                   <use href="/img/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link" href="https://www.instagram.com/goitclub/">
+              <a class="social-link social-link-footer" href="https://www.instagram.com/goitclub/">
                 <svg class="social-icon" width="26" height="26">
                   <use href="/img/icons.svg#icon-insta"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link" href="https://www.youtube.com/c/GoIT">
+              <a class="social-link social-link-footer" href="https://www.youtube.com/c/GoIT">
                 <svg class="social-icon" width="26" height="26">
                   <use href="/img/icons.svg#icon-youtube"></use>
                 </svg>
