--- a/src/css/leave_app_form.css
+++ b/src/css/leave_app_form.css
@@ -305,12 +305,12 @@ input[type='radio']:checked::after {
     padding: 0;
   }
 }
-.cccc {
+.form-img-container {
   width: 100%;
 }
 
 @media screen and (min-width: 1280px) {
-  .cccc {
+  .form-img-container {
     width: 1024px;
   }
 }
