--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -1,7 +1,7 @@
 <section id="application-form" class="section">
   <div class="container">
     <h2 class="section-title">Leave an application</h2>
-    <div class="cccc">
+    <div class="form-img-container">
       <p class="leave-item-text-up">
         Please use the form below to contact us. Enter your name, email, and
         message and we'll get back to you shortly.
@@ -11,14 +11,14 @@
           <picture>
             <source
               srcset="
-                ../img/leave_an_app/girl@1x.png 1x,
-                ../img/leave_an_app/girl@2x.png 2x
+                ./img/leave_an_app/girl@1x.png 1x,
+                ./img/leave_an_app/girl@2x.png 2x
               "
               media="(min-width: 1280px)"
             />
             <img
-              src="../img/leave_an_app/girl@1x.png"
-              srcset="../img/leave_an_app/girl@2x.png 2x"
+              src="./img/leave_an_app/girl@1x.png"
+              srcset="./img/leave_an_app/girl@2x.png 2x"
               alt="Student with headphones"
             />
           </picture>
