Fix modal window slude styles

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -32,7 +32,7 @@
             <a href="#reviews" class="nav-link">Reviews</a>
           </li>
           <li class="nav-item">
-            <a href="#contacts" class="nav-link">Contact</a>
+            <a href="#contacts" class="nav-link">Contact us</a>
           </li>
         </ul>
       </nav>
@@ -86,8 +86,7 @@
           class="close-btn js-close-menu"
           aria-label="close menu"
         >
-          <svg class="modal-close" role="img">
-            <use class="icon--mobile" href="/img/icons.svg#icon-close"></use>
+          <svg class="modal-close" role="img" width="32" height="32">
             <use class="icon--wide" href="/img/icons.svg#icon-close_bold"></use>
           </svg>
         </button>
