--- a/src/css/header.css
+++ b/src/css/header.css
@@ -80,16 +80,18 @@
 .burger_modal {
   position: fixed;
   inset: 0;
-  display: none;
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
   z-index: 1000;
+  transition: 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: opacity, visibility;
 }
 
 .burger_modal.is-open {
-  display: block;
   opacity: 1;
   pointer-events: auto;
+  visibility: visible;
 }
 
 .burger_container {
@@ -106,24 +108,34 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+
+  transform: translateX(100%);
+  transition: var(--common-transition);
+  transition-property: transform;
+}
+
+.burger_modal.is-open .burger_container {
+  transform: translateX(0);
 }
 
 .close-btn {
   align-self: flex-end;
   background: transparent;
   padding: 0;
-  width: 32px;
-  height: 32px;
+  width: 42px;
+  height: 42px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: var(--white);
   border-radius: 50%;
   border: 1px solid transparent;
   transition: var(--common-transition);
-  transition-property: color, border, background;
-  cursor: pointer;
+  transition-property: border, background;
 
   @media screen and (min-width: 768px) {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
   }
 }
 
@@ -131,36 +143,19 @@
 .close-btn:focus {
   border: 1px solid var(--lighter-green);
   background: var(--gradient-green);
-  color: var(--hover-green);
 }
 
-.modal-close .icon--mobile {
-  display: inline;
-
+.close-btn .modal-close {
   @media screen and (min-width: 768px) {
-    display: none;
-  }
-}
-
-.modal-close .icon--wide {
-  display: none;
-
-  @media screen and (min-width: 768px) {
-    display: inline;
+    width: 40px;
+    height: 40px;
   }
 }
 
 .modal-close {
   display: block;
-  width: 32px;
-  height: 32px;
   stroke: currentColor;
   fill: none;
-
-  @media screen and (min-width: 768px) {
-    width: 40px;
-    height: 28px;
-  }
 }
 
 .modal-nav-list {
