--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -45,7 +45,7 @@
               href="https://www.facebook.com/goITclub/"
             >
               <svg class="social-icon" width="26" height="26">
-                <use href="./img/icons.svg#icon-facebook"></use>
+                <use href="/img/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
@@ -55,7 +55,7 @@
               href="https://www.instagram.com/goitclub/"
             >
               <svg class="social-icon" width="26" height="26">
-                <use href="./img/icons.svg#icon-insta"></use>
+                <use href="/img/icons.svg#icon-insta"></use>
               </svg>
             </a>
           </li>
@@ -65,7 +65,7 @@
               href="https://www.youtube.com/c/GoIT"
             >
               <svg class="social-icon" width="26" height="26">
-                <use href="./img/icons.svg#icon-youtube"></use>
+                <use href="/img/icons.svg#icon-youtube"></use>
               </svg>
             </a>
           </li>
