--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -11,14 +11,14 @@
           <picture>
             <source
               srcset="
-                ./img/leave_an_app/girl@1x.png 1x,
-                ./img/leave_an_app/girl@2x.png 2x
+                /img/leave_an_app/girl@1x.png 1x,
+                /img/leave_an_app/girl@2x.png 2x
               "
               media="(min-width: 1280px)"
             />
             <img
-              src="./img/leave_an_app/girl@1x.png"
-              srcset="./img/leave_an_app/girl@2x.png 2x"
+              src="/img/leave_an_app/girl@1x.png"
+              srcset="/img/leave_an_app/girl@2x.png 2x"
               alt="Student with headphones"
             />
           </picture>
