--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -1,4 +1,4 @@
-<section class="section about">
+<section id="about" class="section about">
   <div class="container">
     <h2 class="section-title">About <span>Us</span></h2>
     <p class="section-subtitle">
