--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -43,8 +43,7 @@
 }
 @media screen and (min-width: 1280px) {
   .footer-container {
-    padding-top: 64px;
-    padding-bottom: 64px;
+    padding: 64px 64px 64px 64px;
   }
 }
 
